# poblysh-connectors

./: .env  .env.example  .env.local  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  Makefile  README.md  config.example.toml  format_openapi.sh  mcp.json  openapi.json  test_provider_spec_compliance.rs
.claude/agents/: openspec-qa-checker.md  ui-component-creator.md  ui-qa-reviewer.md  visual-expert.md
.claude/commands/openspec/: apply.md  git-branch-ritual.md  git-push-ritual.md  proposal-qa.md  qa-check.md
.windsurf/workflows/: proposal-qa.md  qa-check.md
docs/: config-example-toml.md  configuration.md  migrations.md  zoho-cliq-connector.md
docs/integration/: connectors-service.md
docs/runbooks/: github-webhook-setup.md  gmail-connector.md  jira-connector-setup.md  local-crypto-rotation.md  webhook-verification.md
examples/nextjs-demo/: README.md  bunfig.toml  jest.config.js  jest.setup.js  package-lock.json  package.json  testSetup.ts  testSetupMinimal.ts
examples/nextjs-demo/app/: layout.tsx  page.tsx
examples/nextjs-demo/components/: DemoModeIndicator.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m2024_01_01_000001_create_tenants.rs  m2025_11_01_102700_create_providers.rs  m2025_11_01_102800_create_connections.rs  m2025_11_01_103000_create_signals.rs  m2025_11_01_103100_create_sync_jobs.rs  m2025_11_02_120000_create_oauth_states.rs  m2025_11_03_000100_add_sync_job_unique_interval_guard.rs  m2025_11_07_120000_create_grounded_signals.rs  m2025_11_07_120100_create_tenant_signal_configs.rs
openspec/: AGENTS.md  project.md
openspec/changes/add-connections-list-endpoint/: proposal.md  tasks.md
openspec/changes/add-connector-trait-and-registry/: tasks.md
openspec/changes/add-dockerization-post-mvp/: design.md  proposal.md  tasks.md
openspec/changes/add-e2e-smoke-tests-local/: proposal.md  qa.md  tasks.md
openspec/changes/add-error-model-and-problem-json/: design.md  tasks.md
openspec/changes/add-gmail-connector/: design.md  proposal.md  tasks.md
openspec/changes/add-google-calendar-connector/: proposal.md  qa.md  tasks.md
openspec/changes/add-health-and-readiness-endpoints/: proposal.md  tasks.md
openspec/changes/add-jira-connector/: tasks.md
openspec/changes/add-local-run-scripts/: design.md  proposal.md  tasks.md
openspec/changes/add-local-token-encryption/: design.md  proposal.md  tasks.md
openspec/changes/add-logging-and-tracing-basics/: proposal.md  tasks.md
openspec/changes/add-mail-spam-filtering/: tasks.md
openspec/changes/add-normalization-fixtures/: design.md  proposal.md  tasks.md
openspec/changes/add-oauth-callback-endpoint/: proposal.md  tasks.md
openspec/changes/add-oauth-start-endpoint/: proposal.md  tasks.md
openspec/changes/add-operator-bearer-auth-and-tenant-header/: proposal.md
openspec/changes/add-provider-and-connection-entities/: proposal.md  tasks.md
openspec/changes/add-providers-endpoint/: tasks.md
openspec/changes/add-seaorm-setup-and-migrations/: design.md  tasks.md
openspec/changes/add-shared-backend-client/: proposal.md  tasks.md
openspec/changes/add-signal-and-syncjob-entities/: proposal.md  tasks.md
openspec/changes/add-weak-signal-engine/: design.md  proposal.md  tasks.md
openspec/changes/add-webhook-ingest-endpoint/: proposal.md  tasks.md
openspec/changes/add-webhook-signature-verification/: design.md  proposal.md  tasks.md
openspec/changes/add-zoho-cliq-connector/: proposal.md  tasks.md
openspec/changes/add-zoho-mail-connector/: design.md  proposal.md  tasks.md
patches/sqlx-mysql/: Cargo.toml
plan/: api-plan.md  change-proposals.md  feature-tracker.yaml  prd.md  seaorm-implementation-plan.md  signals.md  tech-specs.md
plan/nextjs-demo/: api-plan.md  prd.md  tech-specs.md  ui.md
src/: auth.rs  crypto.rs  cursor.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  scheduler.rs  server.rs  sync_executor.rs  telemetry.rs  token_refresh.rs  webhook_verification.rs
src/config/: mod.rs
src/connectors/: example.rs  github.rs  gmail.rs  google_calendar.rs  google_drive.rs  jira.rs  metadata.rs  mod.rs  registry.rs  trait_.rs  zoho_cliq.rs  zoho_mail.rs
src/handlers/: config.rs  connect.rs  connections.rs  grounded_signals.rs  jobs.rs  mod.rs  providers.rs  signals.rs  tenants.rs  tests.rs  types.rs  webhooks.rs
src/mail/: default.rs  mod.rs
src/models/: connection.rs  grounded_signal.rs  mod.rs  oauth_state.rs  provider.rs  signal.rs  signal_without_payload.rs  sync_job.rs  tenant.rs  tenant_signal_config.rs
src/normalization/: mod.rs
src/repositories/: connection.rs  grounded_signal.rs  mod.rs  oauth_state.rs  provider.rs  signal.rs  sync_job.rs  sync_metadata.rs  tenant.rs  tenant_signal_config.rs
src/seeds/: mod.rs  provider.rs
src/signals/: mod.rs
tests/: auth_integration_tests.rs  config_loader_tests.rs  crypto_integration_tests.rs  e2e_smoke_tests.rs  github_connector_integration_tests.rs  github_integration_tests.rs  integration_tests.rs  mod.rs  normalization_integration_tests.rs  oauth_callback_integration_tests.rs  provider_connection_integration_tests.rs  provider_repository_tests.rs  provider_seeding_tests.rs  tenant_isolation_tests.rs  zoho_cliq_webhook_tests.rs
tests/fixtures/: .env  .env.local  .env.test  .env.test.local
tests/integration/: db_tests.rs  mod.rs  signal_sync_job_tests.rs  sync_executor_tests.rs
tests/test_utils/: mod.rs
(+287 files in other folders)
