[package]
name = "connectors"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.85"
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["uuid", "chrono", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenvy = "0.15.7"
thiserror = { version = "2.0.11", features = ["std"] }
sea-orm = { version = "1.1.17", default-features = false, features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
] }
sea-orm-migration = { version = "1.1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
migration = { path = "migration" }
anyhow = "1.0.95"
log = "0.4.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-log = "0.2.0"
tower-http = { version = "0.6.2", features = ["trace"] }
metrics = "0.23.0"
tokio-util = "0.7.17"
url = { version = "2.5.4", features = ["serde"] }
subtle = "2.6.1"
tower = "0.5.1"
td-rs = "0.1.5"
rand = "0.8.5"
base64 = "0.22.1"
aes-gcm = "0.10.3"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
base64-url = "3.0.0"
regex = "1.11.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
scopeguard = "1.2.0"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
jsonwebtoken = "9.3.0"
lru = "0.16.2"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
wiremock = "0.6.2"
base64 = "0.22"
tempfile = "3.14.0"
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
anyhow = "1.0.95"
walkdir = "2.5.0"
assert_cmd = "2.0.16"
portpicker = "0.1.1"

[patch.crates-io]
sqlx-mysql = { path = "patches/sqlx-mysql" }
